--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.1.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^0.7.2",
+        "laravel-vite-plugin": "^0.7.4",
         "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "vite": "^4.2.2"
     }
 }
